searchdefinitions -> schemas